# app_development

Desktop/: ЛР1_Борцов_РИМ-150950.docx
Desktop/Homework/: ДЗ_3_Борцов.ipynb  ДЗ_4_Борцов.ipynb
Desktop/LR1/: docker-compose.yaml
Desktop/LR2/: main.py  users.py  ЛР2.docx
Desktop/LR3/: orm_db.py  pyproject.toml  ~$ЛР3.docx  ЛР3.docx
Desktop/LR3/app/: main.py
Desktop/LR3/app/controllers/: user_controller.py
Desktop/LR3/app/models/: __init__.py  user_model.py
Desktop/LR3/app/repositories/: user_repository.py
Desktop/LR3/app/services/: user_service.py
Desktop/LR3/migrations/: env.py
Desktop/LR3/migrations/versions/: 4df28185915d_.py  5d4858bfd2ef_.py  655f2e466d0b_.py  6c20b075f37f_change_uuid_to_integer.py  da71ebaffdc0_.py  f440ba98f690_.py  fbbff376ee67_test.py
