[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "litestar>=2.18.0",
    "logging>=0.4.9.6",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.44",
    "syncpg>=1.1.3",
    "uvicorn>=0.38.0",
]
